# GenSubtitles

./: .gitignore  README.es.md  README.md  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md  gsd-file-manifest.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v1.0-v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-project-infrastructure/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-UAT.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-audio-extraction-module/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-UAT.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-transcription-engine/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-UAT.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/research/: SUMMARY.md
docs/: cli-tutorial.md
gensubtitles/: exceptions.py
gensubtitles/api/: dependencies.py  main.py
gensubtitles/cli/: main.py
gensubtitles/core/: audio.py  pipeline.py  settings.py  srt_writer.py  steps.py  transcriber.py  translator.py
gensubtitles/gui/: __init__.py  locale.py  main.py  server.py  styles.py  theme.py
tests/: conftest.py  test_api.py  test_api_steps.py  test_audio.py  test_cli.py  test_e2e.py  test_infrastructure.py  test_pipeline.py  test_settings.py  test_srt_writer.py  test_steps.py  test_transcriber.py  test_translator.py
(+252 files in other folders)
