[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gensubtitles"
version = "0.1.0"
description = "Automatic video subtitle generation — offline, no API keys required"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.2.1",
    "argostranslate>=1.11.0",
    "tqdm>=4.0.0",
    "srt>=3.5.3",
    "pysubs2>=1.6.0",
    "platformdirs>=4.0.0",
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "typer[all]>=0.15.0",
    "deepl>=1.18",
    "requests>=2.31.0",
]

[project.optional-dependencies]
gui = [
    "customtkinter>=5.2.0",
    "darkdetect>=0.8.0",
]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
gensubtitles = "gensubtitles.cli.main:app"
gensubtitles-gui = "gensubtitles.gui.main:main"

[tool.hatch.build.targets.wheel]
packages = ["gensubtitles"]

[tool.pytest.ini_options]
testpaths = ["tests"]
